<resources>
    <string name="app_name">彩票</string>
    <string name="user_login">用户登录</string>
    <string name="note_register">注册真实可用，注册成功后的用户可用于登陆</string>
    <string name="login_again">请重新登录</string>
    <string name="not_audited">存在未审核的订单</string>
    <string name="amount_less">金额小于最低限制</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="login">登陆</string>
    <string name="login_success">登陆成功</string>
    <string name="login_success_shiwan">试玩登陆成功</string>
    <string name="login_is_shiwan">请登录正式会员账号！</string>
    <string name="login_fail">登陆失败</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="input_register_info">为了您的资金安全，请使用真实资料!</string>
    <string name="user_account">用户账号:</string>
    <string name="recommended">推荐人或上级代理</string>
    <string name="user_account_tip">用户账号(6-15个字母/数字)</string>
    <string name="user_pwd_tip">登陆密码(6-15个字母/数字)</string>
    <string name="login_pwd">登陆密码:</string>
    <string name="confirm_pwd">确认密码:</string>
    <string name="input_pwd_repeat">请重复输入密码</string>
    <string name="your_name">您的姓名:</string>
    <string name="input_real_name">请输入您的真实中文姓名</string>
    <string name="withdraw_pwd">取款密码:</string>
    <string name="email">电子邮箱：</string>
    <string name="email_tips">提款认证时需要，切勿忘记</string>
    <string name="email_tip">6~15位字符,便于之后用于找回密码</string>
    <string name="fill_register_info">请将注册信息填写完整</string>
    <string name="pwd_dif">两次密码不一致</string>
    <string name="draw_pwd_length_fail">取款密码必须为4位</string>
    <string name="draw_pwd_empty_fail">取款密码不能为空</string>
    <string name="email_empty_fail">电子邮箱不能为空</string>
    <string name="email_fail">电子邮箱格式不正确</string>
    <string name="account_empty_fail">请输入用户账号</string>
    <string name="pwd_empty_fail">请输入登录密码</string>
    <string name="account_char_fail">用户名必须以小写字母开头</string>
    <string name="confirm_pwd_empty_fail">请输入确认登录密码</string>
    <string name="confirm_pwd_length_fail">确认登录密码必须为6-15个字符</string>
    <string name="account_length_fail">用户账号必须为6-15个字符</string>
    <string name="pwd_length_fail">登录密码必须为6-15个字符</string>
    <string name="yzm_empty">请输入验证码</string>
    <string name="yzm_fail">验证码错误</string>
    <string name="get_pwd_hint">用户账号：</string>
    <string name="rmb_str">¥</string>
    <string name="withdraw">提现</string>
    <string name="recharge">充值</string>
    <string name="cancel">取消</string>
    <string name="bet">下注</string>
    <string name="lian_ma">连码</string>
    <string name="cq_ssc">重庆时时彩</string>
    <string name="mark_six">香港六合彩</string>
    <string name="te_a">特A</string>
    <string name="te_b">特B</string>
    <string name="z_a">正A</string>
    <string name="z_b">正B</string>
    <string name="zmt_1">正1特</string>
    <string name="zmt_2">正2特</string>
    <string name="zmt_3">正3特</string>
    <string name="zmt_4">正4特</string>
    <string name="zmt_5">正5特</string>
    <string name="zmt_6">正6特</string>
    <string name="s_x">生肖</string>
    <string name="wei_shu">尾数</string>
    <string name="er_qz">二全中</string>
    <string name="zho_er">中二</string>
    <string name="te_chu">特串</string>
    <string name="san_qz">三全中</string>
    <string name="zho_san">中三</string>
    <string name="si_z_yi">四中一</string>
    <string name="er_x">二肖</string>
    <string name="san_x">三肖</string>
    <string name="si_x">四肖</string>
    <string name="wu_x">五肖</string>
    <string name="liu_x">六肖</string>
    <string name="sxl_2">二肖连中</string>
    <string name="sxl_3">三肖连中</string>
    <string name="sxl_4">四肖连中</string>
    <string name="sxl_5">五肖连中</string>
    <string name="sxl_2_no">二肖不连中</string>
    <string name="sxl_3_no">三肖不连中</string>
    <string name="sxl_4_no">四肖不连中</string>
    <string name="wsl_2">二尾连中</string>
    <string name="wsl_3">三尾连中</string>
    <string name="wsl_4">四尾连中</string>
    <string name="wsl_2_no">二尾不连中</string>
    <string name="wsl_3_no">三尾不连中</string>
    <string name="wsl_4_no">四尾不连中</string>
    <string name="qbz_5">五不中</string>
    <string name="qbz_6">六不中</string>
    <string name="qbz_7">七不中</string>
    <string name="qbz_8">八不中</string>
    <string name="qbz_9">九不中</string>
    <string name="qbz_10">十不中</string>
    <string name="qbz_11">十一不中</string>
    <string name="qbz_12">十二不中</string>
    <string name="group_num">组数：</string>
    <string name="total_money">总计：</string>
    <string name="bet_detail">下注明细</string>
    <string name="bet_just">请选择%d项下注</string>
    <string name="bet_at_lest">至少选择%d项下注</string>
    <string name="bet_lest_item">至少选择%d项,</string>
    <string name="bet_max_item">最多选择%d项下注</string>
    <string name="optional_two">任选二</string>
    <string name="optional_three">任选三</string>
    <string name="optional_four">任选四</string>
    <string name="optional_five">任选五</string>
    <string name="capital_manager">资金管理</string>
    <string name="modify_bank_info">修改银行卡</string>
    <string name="add_bank_info">添加银行卡</string>
    <string name="online_bank_pay">网银在线充值</string>
    <string name="online_ali_pay">支付宝在线充值</string>
    <string name="online_wechat_pay">微信在线充值</string>
    <string name="online_cft_pay">财付通在线充值</string>
    <string name="online_quick_pay">在线快捷支付</string>
    <string name="manual_input">线下入款</string>
    <string name="input_amount">请输入充值金额</string>
    <string name="input_change_money">请输入转换金额</string>
    <string name="amount_line_down_min">最低%.2f元</string>
    <string name="amount_line_down_min2">最低%d元</string>
    <string name="amount_limit_tip">单笔下限100.00，单笔上限1,000,00.00</string>
    <string name="amount_limit_tip1">单笔下限%1$.2f，单笔上限%2$.2f</string>
    <string name="amount_limit_tip2">单笔下限%1$d，单笔上限%2$d</string>
    <string name="amount_min_out_of">金额不能小于%.2f 请重新输入</string>
    <string name="amount_min_out_of2">金额不能小于%d 请重新输入</string>
    <string name="amount_max_out_of">金额大于%.2f 请重新输入</string>
    <string name="amount_max_out_of2">金额大于%d 请重新输入</string>
    <string name="recharge_sure">确认存款</string>
    <string name="reset_amount">重置</string>
    <string name="online_pay">在线支付</string>
    <string name="manual_deposit">线下入款</string>
    <string name="deposit_tip">请先转账成功后在点下一步提交存款信息</string>
    <string name="bind_card_tip">为了您的账户安全，真实姓名要与绑定的银行卡姓名一致</string>
    <string name="remittance_mode">汇款方式：</string>
    <string name="remittance_amount">金&#12288;&#12288;额：</string>
    <string name="ali_order_num">交易单号：</string>
    <string name="ali_order_num_last">交易单号后四位</string>
    <string name="wx_order_num">商户单号：</string>
    <string name="wx_order_num_last">商户单号后四位</string>
    <string name="remittance_time">时&#12288;&#12288;间：</string>
    <string name="account_name1">备&#12288;&#12288;注：</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="confirm_deposit">确认存款</string>
    <string name="embodied_amount">提现金额</string>
    <string name="embodied_pwd">提现密码</string>
    <string name="amount_hint">最低金额￥100</string>
    <string name="pwd_hint">请正确填写4位数的提款密码</string>
    <string name="reset">重置</string>
    <string name="confirm">确认</string>
    <string name="rb_deposit">存款</string>
    <string name="rb_withdraw">取款</string>
    <string name="rb_record">交易记录</string>
    <string name="no_record">暂无存取款记录...</string>
    <string name="add_or_remove">添加银行账号</string>
    <string name="choice_bank">请选择要转入的银行</string>
    <string name="bank_test">中国建设银行</string>
    <string name="record_detail">交易记录详情</string>
    <string name="record_no">交易单号:</string>
    <string name="record_time">交易时间:</string>
    <string name="record_style">交易方式:</string>
    <string name="record_status">交易状态:</string>
    <string name="record_amount">交易金额:</string>
    <string name="ensure">确定</string>
    <string name="bank_manage">银行卡管理</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="cft_pay">财付通支付</string>
    <string name="select_bank">选择银行：</string>
    <string name="bank_account_name">姓&#12288;&#12288;名：</string>
    <string name="ali_account_name">入"  "款"  "人：</string>
    <string name="wx_account_name">名&#12288;&#12288;称：</string>
    <string name="bank_num">银行卡号：</string>
    <string name="account_address">开户地址：</string>
    <string name="pay_password">支付密码：</string>
    <string name="input_address">请输入开户行地址</string>
    <string name="input_pwd">请输入支付密码</string>
    <string name="modify_bank_success">修改银行卡信息成功</string>
    <string name="modify_bank_fail">修改银行卡信息失败,请稍后再试</string>
    <string name="manual_fail">入款失败</string>
    <string name="manual_success">入款成功</string>
    <string name="money_beyond1">提现金额不能低于100元</string>
    <string name="money_beyond">提现金额超过账户余额</string>
    <string name="bind_bankcard_first">请先绑定银行卡</string>
    <string name="input_tx_amount">请输入提现金额</string>
    <string name="input_tx_pwd">请输入提现密码</string>
    <string name="input_tx_pwd1">提现密码必须为4位</string>
    <string name="draw_fail">提现失败</string>
    <string name="draw_success">提现成功</string>
    <string name="input_user_name">请输入姓名</string>
    <string name="input_user_psw">请输入密码</string>
    <string name="input_order_num">请输入交易单号的后4位</string>
    <string name="input_account_name">请输入账号名称</string>
    <string name="input_manual_amount">请输入金额</string>
    <string name="less_manual_amount">入款金额不能低于%.2f元</string>
    <string name="less_manual_amount2">入款金额不能低于%d元</string>
    <string name="input_time">时间不能为空</string>
    <string name="no_select_bank">请选择银行卡</string>
    <string name="input_complete">请将信息填写完整</string>
    <string name="correct_card_num">请输入有效的银行卡号</string>
    <string name="input_bank_address">请输入银行地址</string>
    <string name="input_tq_pwd">请输入提款密码</string>
    <string name="tq_pwd_length_fail">提款密码必须为4位</string>
    <string name="input_card_num">请输入16-19位的银行卡号</string>
    <string name="open_bank">开户银行：</string>
    <string name="bank_address">银行地址：</string>
    <string name="payee">收 款 人：</string>
    <string name="user_balance">账户余额</string>
    <string name="deposit_fail">存款失败</string>
    <string name="choice_zh">选择账号</string>
    <string name="zhang_hu">账户</string>
    <string name="card_number">卡&#12288; 号：</string>
    <string name="bank_zh">银行卡账号</string>
    <string name="ali_zh">支付宝账号</string>
    <string name="wechat_zh">微信账号</string>
    <string name="cft_zh">QQ钱包</string>
    <string name="quick_zh">快捷支付账号</string>
    <string name="deposit">存入：</string>
    <string name="take_out">取出：</string>
    <string name="untreated">未处理</string>
    <string name="fail">失败</string>
    <string name="success">成功</string>
    <string name="online_bank">网银</string>
    <string name="bank">银行</string>
    <string name="bank2">银&#12288;&#12288;行：</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="tenpay">QQ钱包</string>
    <string name="quick_pay">快捷支付</string>
    <string name="account_yue">余额：</string>
    <string name="personalcenter_qdxg">确定修改</string>
    <string name="mypassword_xgdlmm">修改登录密码</string>
    <string name="mypasslogin_szdlmm">修改登录密码</string>
    <string name="mypasslogin_qsrjmm">请输入旧密码</string>
    <string name="mypasslogin_qsrxmm">请输入新密码</string>
    <string name="mypasslogin_qzcsrxmm">请再次输入新密码</string>
    <string name="updatelogin_xgcg">修改成功</string>
    <string name="updatelogin_3mtddljm">3秒后跳到登录界面</string>
    <string name="user">用户：</string>
    <string name="loading">加载中…</string>
    <string name="choice_bank_you_deposit">选择您转账所使用的银行</string>
    <string name="real_name">真实姓名：</string>
    <string name="bank_num_again">重复卡号：</string>
    <string name="input_card_num_again">请再次输入银行卡号</string>
    <string name="commit">提交</string>
    <string name="close">关闭</string>
    <string name="register_first">请先注册</string>
    <string name="notification">通知</string>
</resources>