<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="@dimen/dimen_40"
    android:layout_marginStart="@dimen/dimen_40"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@drawable/shape_color_primary_top_corners_6dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/shape_color_white_bottom_corners_6dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_warning"/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingEnd="@dimen/dimen_10"
            android:paddingStart="@dimen/dimen_10"
            android:text="@string/register_first"
            android:textColor="@color/gray_4c4c4c"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_to_register"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_color_2f64d4_corners_half_circle"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_close"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/shape_color_da524d_corners_half_circle"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>