<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45"
        android:background="@color/color_primary"
        android:padding="@dimen/dimen_10">

        <ImageView
            android:id="@+id/imageView_toLeftArrow"
            android:layout_width="@dimen/dimen_45"
            android:layout_height="@dimen/dimen_45"
            android:scaleType="center"
            android:src="@mipmap/icon_left_arrow_back"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/mypassword_xgdlmm"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@mipmap/icon_validation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/updatelogin_xgcg"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_jump_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/updatelogin_3mtddljm"
        android:textSize="14sp" />

</LinearLayout>